# bmap-rs

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yml
bmap/: Cargo.toml
bmap-parser/: Cargo.toml  README.md
bmap-parser/src/: bmap.rs  discarder.rs  lib.rs
bmap-parser/src/bmap/: xml.rs
bmap-parser/tests/: copy.rs  parse.rs
bmap-rs/: Cargo.toml
bmap-rs/src/: main.rs
bmap/src/: bmap.rs  discarder.rs  helpers.rs  lib.rs
bmap/tests/: copy.rs  parse.rs
bmap/tests/data/: test.img.bmap  testing.img.bmap
src/: bmap.rs  lib.rs
src/bmap/: xml.rs
tests/: copy.rs  parse.rs
tests/data/: simple.bmap
