[package]
name = "bmap-parser"
version = "0.2.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2024"
license = "MIT AND Apache-2.0"
description = "bmap-parser is a library for Rust that allows you to copy files or flash block devices safely"
repository = "https://github.com/collabora/bmap-rs"
readme = "../README.md"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.17"
quick-xml = { version = "0.38.0", features = [ "serialize" ] }
serde = { version = "1.0.147", features = [ "derive" ] }
anyhow = { version = "1.0.40", optional = true }
sha2 = { version = "0.10.6", features = [ "asm" ] }
strum = { version = "0.27.2", features = [ "derive"] }
digest = "0.10.5"
flate2 = "1.0.20"
async-trait = "0.1.58"
futures = "0.3.25"
