[package]
name = "bmap-rs"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT AND Apache-2.0"
description = "bmap-rs is an application that handles the use of bmap crate"
repository = "https://github.com/collabora/bmap-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmap-parser = { path = "../bmap-parser", version = "0.1.0"}
anyhow = "1.0.66"
nix = "0.26.1"
flate2 = "1.0.24"
clap = { version = "4.0.18", features = ["cargo"] }
indicatif = { version = "0.17.1", features = ["tokio"] }
async-compression = { version = "0.3.15", features = ["gzip", "futures-io"] }
tokio = { version = "1.21.2", features = ["rt", "macros", "fs", "rt-multi-thread"] }
reqwest = { version = "0.11.12", features = ["stream"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
futures = "0.3.25"
