[package]
name = "bmap"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
quick-xml = { version = "0.25.0", features = [ "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
structopt = { version = "0.3.21", optional = true }
sha2 = { version = "0.10.6", features = [ "asm" ] }
strum = { version = "0.24.1", features = [ "derive"] }
digest = "0.10.5"
flate2 = "1.0.20"
nix = "0.25"
anyhow = "1"